<resources>
    <string name="app_name">LAB03E04</string>
    <string name="results">0</string>
    <string name="ac_button">AC</string>
    <string name="percent_button">%</string>
    <string name="div_button">/</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="multi_button">x</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="minus_button">-</string>
    <string name="button_0">0</string>
    <string name="equal_button">=</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="plus_button">+</string>
</resources>
